objects/student__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>Submitted</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval Status</fullName>
                </value>
                <value>
                    <fullName>1st Approval status is completed</fullName>
                </value>
                <value>
                    <fullName>2nd Approval status is completed</fullName>
                </value>
                <value>
                    <fullName>3rd Approval status is completed</fullName>
                </value>
                <value>
                    <fullName>Finally Approved</fullName>
                </value>
                <value>
                    <fullName>Finally Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_details__c</fullName>
        <inlineHelpText>provide bank details</inlineHelpText>
        <label>Bank details</label>
        <length>14</length>
        <maskChar>X</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Batch__c.business__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>students</relationshipLabel>
        <relationshipName>students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Batch_staff_Details__c</fullName>
        <formula>TEXT(Batch__r.Staff_Name__c)</formula>
        <label>Batch staff Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>students list</relationshipLabel>
        <relationshipName>students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Can_we_submit_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can we submit for Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Sample__c</fullName>
        <formula>TEXT(Country__c)</formula>
        <label>Country Sample</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AUS</fullName>
                </value>
                <value>
                    <fullName>NZ</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                    <default>true</default>
                    <label>IND</label>
                </value>
                <value>
                    <fullName>INDIA</fullName>
                    <isActive>false</isActive>
                    <label>INDIA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <label>Dummy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Data__c</fullName>
        <inlineHelpText>Provide all educational data details</inlineHelpText>
        <label>Educational Data</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Full_Fee_paid__c</fullName>
        <formula>IF(Pending_fees__c  &lt;= 0, true, false)</formula>
        <label>Is Full Fee paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_fee_paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is fee paid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_poor_student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is poor student?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pending_fees__c</fullName>
        <formula>Total_course_fees__c  -  howmuch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refer__c</fullName>
        <label>Refer</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Roll_call__c</fullName>
        <displayFormat>sr-{000}</displayFormat>
        <label>Roll call</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Student_Key_number__c</fullName>
        <label>Student Key number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_full_details__c</fullName>
        <formula>Name  + &apos; &apos;  + Address__c  +   &apos; &apos;  + TEXT(Country__c)  +   &apos; &apos; + TEXT(state__c)</formula>
        <label>Student full details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_course_fees__c</fullName>
        <label>Total course fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>courses__c</fullName>
        <label>courses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SAAS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>vb</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>current_location__c</fullName>
        <label>current location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>email_address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>email address</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>howmuch__c</fullName>
        <label>how much</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>phone_no__c</fullName>
        <label>phone no</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sss</label>
        <referenceTo>sss__c</referenceTo>
        <relationshipLabel>students</relationshipLabel>
        <relationshipName>students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>andhra</fullName>
                </value>
                <value>
                    <fullName>chennai</fullName>
                </value>
                <value>
                    <fullName>delhi</fullName>
                </value>
                <value>
                    <fullName>ka</fullName>
                </value>
                <value>
                    <fullName>maharashtra</fullName>
                </value>
                <value>
                    <fullName>telangana</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Edison</fullName>
                </value>
                <value>
                    <fullName>Sanfrancisco</fullName>
                </value>
                <value>
                    <fullName>Wellington</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>student_permanant_location__c</fullName>
        <inlineHelpText>provide details compulasary</inlineHelpText>
        <label>student permanant location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>temp_address__c</fullName>
        <inlineHelpText>please enter altenative address</inlineHelpText>
        <label>temp address</label>
        <type>TextArea</type>
    </fields>
    <label>student</label>
    <listViews>
        <fullName>AUS_View</fullName>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>Country__c</columns>
        <columns>state__c</columns>
        <columns>howmuch__c</columns>
        <columns>Is_fee_paid__c</columns>
        <columns>Is_Full_Fee_paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>AUS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>student__c.AUS_recordtype_Layout</value>
        </filters>
        <label>AUS View</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch__c</columns>
        <columns>courses__c</columns>
        <columns>Business__c</columns>
        <columns>Total_course_fees__c</columns>
        <columns>howmuch__c</columns>
        <columns>Pending_fees__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>India_View</fullName>
        <columns>NAME</columns>
        <columns>Batch__c</columns>
        <columns>Country__c</columns>
        <columns>state__c</columns>
        <columns>Total_course_fees__c</columns>
        <columns>howmuch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>IND</value>
        </filters>
        <label>India View</label>
    </listViews>
    <listViews>
        <fullName>NZ_View</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>state__c</columns>
        <columns>Is_fee_paid__c</columns>
        <columns>howmuch__c</columns>
        <columns>Is_Full_Fee_paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>NZ</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>student__c.NZ_Student_Layout</value>
        </filters>
        <label>NZ View</label>
    </listViews>
    <listViews>
        <fullName>Sam</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Sam</label>
    </listViews>
    <listViews>
        <fullName>USA_view</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Address__c</columns>
        <columns>phone_no__c</columns>
        <columns>courses__c</columns>
        <columns>Country__c</columns>
        <columns>state__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>student__c.USA_student_Record_Type</value>
        </filters>
        <label>USA view</label>
    </listViews>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <recordTypes>
        <fullName>AUS_recordtype_Layout</fullName>
        <active>true</active>
        <label>AUS recordtype Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>India_Record_type_Laoyut</fullName>
        <active>true</active>
        <label>India Record type Laoyut</label>
    </recordTypes>
    <recordTypes>
        <fullName>NZ_Student_Layout</fullName>
        <active>true</active>
        <label>NZ Student Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>UK_Recordtype_Layout</fullName>
        <active>true</active>
        <label>UK Recordtype Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_student_Record_Type</fullName>
        <active>true</active>
        <label>USA student Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>dummy</fullName>
        <active>true</active>
        <label>dummy</label>
    </recordTypes>
    <recordTypes>
        <fullName>dummy1</fullName>
        <active>true</active>
        <label>dummy1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SFDC_poor_student_fees_structure</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Is_poor_student__c &amp;&amp; howmuch__c&lt;4000, true, false)</errorConditionFormula>
        <errorMessage>Show error message that is poor student</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_amount_paid</fullName>
        <active>true</active>
        <errorConditionFormula>IF( howmuch__c  &gt; 0 &amp;&amp;  Is_fee_paid__c  == false, true, false)</errorConditionFormula>
        <errorDisplayField>Is_fee_paid__c</errorDisplayField>
        <errorMessage>then show the message</errorMessage>
    </validationRules>
</CustomObject>